--- a/docs/路由规则定义规范.md
+++ b/docs/路由规则定义规范.md
@@ -19,6 +19,6 @@ demo: 以推荐模块为例，路径前缀地址： /A/B/
 |   操作页面 |            路由地址 | 路由统一后缀 |
 | --- | --- | --- |
 | 新增页面url | ‘/C-1/add' | add |
-| 编辑页面url | '/C-1/edit?id=' | edit |
+| 编辑页面url | '/C-1/edit?id=' | edit |
 | 查看页面url | '/C-1/info?id=' | info |
 | 列表页面url | '/C-1/list?pagesize=1' | list |
